--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,22 @@
-h1, h2, p{
-    text-align: center;
+h1,
+h2,
+p {
+  text-align: center;
+  color: blue; 
+  /* i made a change to the text color */
 }
 
-p{
-    color:blue;
-    font-size: 36px;
+p {
+  color: blueviolet;
+  font-size: 36px;
 }
 
-div{
-    display:flex;
-    justify-self:center;
+body{
+    background-color: slategray;
+    /* another change to the background color */
+}
+
+div {
+  display: flex;
+  justify-self: center;
 }
